# uproot_browser

./: .gitignore  LICENSE  README.md  pyproject.toml
src/uproot_browser/: __main__.py  app.py  array_parse.py
src/uproot_browser/widgets/: array_summary.py  branch_select.py  dist_figure.py  dist_summary.py  file_selector.py
