[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uproot_browser"
version = "0.9.0"
description = "Easily turning python functions into interactive scripts"
license = {file = "LICENSE"}
authors = [
    {name = "Yi-Mu 'Enoch' Chen"}
]
dependencies = [
    "uproot",
    "textual",
    "textual_plotext",
    "fuzzyfinder"
]

[project-scripts]
uproot_browser = "uproot_browser.app:main"

[dependency-groups]
dev = [
    "ruff>=0.9.3",
]
